Project namespace renamed

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.fernandobrs.avro</groupId>
-  <artifactId>avro-utils</artifactId>
+  <groupId>com.itau.shared</groupId>
+  <artifactId>messaging-tools</artifactId>
   <version>1.0.0-beta</version>
 
   <name>tools</name>
