--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.8.1</version>
     </dependency>
+
+    <!-- Kafka dependencies -->
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>2.1.0</version>
+    </dependency>
+    
     <!-- Unit test dependencies -->
     <dependency>
       <groupId>junit</groupId>
